--- a/index.html
+++ b/index.html
@@ -31,5 +31,22 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="our-feature-container">
+            <div class="our-feature-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+
+            <div class="our-feature-content">
+                <h3><span>Quick list</span> <span>of Our</span> <span>Features</span></h3> 
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
