sucess box section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects Website</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
     <header>
         <nav class="header-nav">
@@ -22,7 +24,8 @@
         <div class="brand-new-container">
             <div class="content-div">
                 <h1>Brand New Group of Architects</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explor More</button>
             </div>
 
@@ -42,11 +45,47 @@
             </div>
 
             <div class="our-feature-content">
-                <h3><span>Quick list</span> <span>of Our</span> <span>Features</span></h3> 
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3><span>Quick list</span> <span>of Our</span> <span>Features</span></h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+
+
+
+
+
+        <section>
+
+            <h3>Some Facts</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.</p>
+
+            <div class="sucess-box-container">
+                <div class="sucess-box">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2>54</h2>
+                    <span>Awards Winnings</span>
+                </div>
+                <div class="sucess-box">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2>1458</h2>
+                    <p>Project Finished</p>
+                </div>
+                <div class="sucess-box">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2>590</h2>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="sucess-box">
+                    <img src="images/icons/email.png" alt="">
+                    <h2>22578</h2>
+                    <p>Email Send</p>
+                </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
