completed some fact section

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
 
 
-        <section>
+        <section class="some-fact-parent">
 
-            <h3>Some Facts</h3>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+            <h3 class="some-fact-title">Some Facts</h3>
+            <p class="some-fact-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                 alteration.</p>
 
             <div class="sucess-box-container">
@@ -71,17 +71,17 @@
                 <div class="sucess-box">
                     <img src="images/icons/projects.png" alt="">
                     <h2>1458</h2>
-                    <p>Project Finished</p>
+                    <span>Project Finished</span>
                 </div>
                 <div class="sucess-box">
                     <img src="images/icons/customers.png" alt="">
                     <h2>590</h2>
-                    <p>Clients Worked</p>
+                    <span>Clients Worked</span>
                 </div>
                 <div class="sucess-box">
                     <img src="images/icons/email.png" alt="">
                     <h2>22578</h2>
-                    <p>Email Send</p>
+                    <span>Email Send</span>
                 </div>
             </div>
         </section>
