Complte basic g3 artchitects responsive website design

--- a/index.html
+++ b/index.html
@@ -52,14 +52,51 @@
             </div>
         </section>
 
+        <section class="features-section">
+            <div class="features-container">
+                <div class="features-content">
+                    <h3>Features you will <br> love & enjoy</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
+                    <div class="features-card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+
+                    <div class="features-card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+
+                    <div class="features-card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+
+                    <div class="features-card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                </div>
+
+                <div class="Features-img">
+                    <img src="images/architect.png" alt="">
+
+                    <div class="ten-year-exp">
+                        <h2>10+ years</h2>
+                        <span>Experience</span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
         <section class="some-fact-parent">
 
             <h3 class="some-fact-title">Some Facts</h3>
-            <p class="some-fact-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+            <p class="some-fact-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered
                 alteration.</p>
 
             <div class="sucess-box-container">
@@ -85,7 +122,28 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="sponsors-section">
+            <h3 class="sponsors-title">Our Sponsors</h3>
+            <p class="sponsors-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
+
+            <div class="sponsor-img-container">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
     </main>
+
+    <footer class="footer-section">
+        <div class="copyright-text">
+            <p>&copy;2024 All Rights Reserved</p>
+        </div>
+    </footer>
 </body>
 
 </html>
